# binostr

./: Cargo.toml  LICENSE  README.md  build.rs
benches/: by_category.rs  by_kind.rs  common.rs  deserialize.rs  serialize.rs  size_analysis.rs  zero_copy.rs
docs/: nostr.capnp  nostr.cddl  nostr_binary.proto  plan.md
examples/: analyze_data.rs  batch_analysis.rs  bench_report.rs  create_sample.rs  size_report.rs  verify_dannypack.rs
src/: capnp.rs  cbor.rs  dannypack.rs  event.rs  json.rs  lib.rs  loader.rs  notepack.rs  proto.rs  sampler.rs  stats.rs
tests/: roundtrip.rs
